min display and overflow correction

--- a/about/styles.css
+++ b/about/styles.css
@@ -28,6 +28,7 @@ div {
   border-radius: 10px;
   margin-top: 10px;
   width: 100%;
+  overflow:hidden ;
 
 }
 
